fix: aligned checkbox with label

--- a/packages/styles/components/CheckboxRadio.module.scss
+++ b/packages/styles/components/CheckboxRadio.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   div {
+    align-items: center;
     display: flex;
   }
 }
